Fixing layout issues on OSx

--- a/index.css
+++ b/index.css
@@ -18,6 +18,8 @@ body {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   z-index: 99999;
 }
 nav {
@@ -70,6 +72,8 @@ nav {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   width: 95%;
 }
 #wedding-sun {
@@ -97,6 +101,8 @@ nav {
   z-index: 1;
   left: 50%;
   transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
   color: #CCC;
 }
 .wedding-section {
